<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_data_to_website"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
            android:textStyle="bold" android:textSize="30sp" android:id="@+id/title_text"
            style="@style/Widget.OrientUp.TextView"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_text_number_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/insert_competition_id_text"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_text"
            android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:text="@string/select_xml_button_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/select_xml_button"
            app:layout_constraintTop_toBottomOf="@+id/service_switch"
            android:layout_marginTop="8dp" android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/upload_result"
            android:textSize="18sp" android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/start_service_button"
            android:layout_marginBottom="8dp" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>

    <Button
            android:text="@string/upload_button_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/upload_button"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
            android:enabled="false"/>

    <TextView
            android:text="@string/file_loaded_text"
            android:layout_width="0dp"
            style="@style/Widget.OrientUp.TextView"
            android:layout_height="wrap_content" android:id="@+id/file_loaded_text"
            app:layout_constraintTop_toBottomOf="@+id/select_xml_button"
            android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:textStyle="italic" android:textAlignment="textStart"
    />
    <Button
            android:text="@string/start_service_button_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/start_service_button"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/upload_button" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toStartOf="@+id/stop_service_button"
            android:enabled="false"
            android:layout_marginEnd="4dp"/>
    <Button
            android:text="@string/stop_service_button_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/stop_service_button"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/upload_button" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/start_service_button"
            android:enabled="false"
            android:layout_marginStart="4dp"/>
    <com.google.android.material.switchmaterial.SwitchMaterial
            android:text="@string/run_as_service_switch_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/service_switch"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/service_information_text"
            android:layout_width="0dp"
            style="@style/Widget.OrientUp.TextView"
            android:layout_height="wrap_content" android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/edit_text_number_layout"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>